# pitty-party-api

./: Pipfile  Procfile  manage.py  pyproject.toml  requirements.txt  seed_database.sh  vercel.json
pittyapi/: admin.py  apps.py
pittyapi/fixtures/: adopter_fixtures.json  dog_fixtures.json  events.json  tokens.json  users.json
pittyapi/migrations/: 0001_initial.py
pittyapi/models/: Adopter.py  Adoption.py  Application.py  Dog.py  Event.py  Fostering.py  MedicalRecord.py  PittyParty.py  __init__.py
pittyapi/views/: __init__.py  adopter.py  adoption.py  application.py  dog.py  events.py  register.py
pittyproject/: asgi.py  settings.py  urls.py  vercel.json  wsgi.py
